--- a/tempHackCU/my_site/svapp/templates/svapp/home.html
+++ b/tempHackCU/my_site/svapp/templates/svapp/home.html
@@ -4,7 +4,7 @@
 <center>Sound Cloud Visualizer</center>
 </font>
 </h2>
-<form name="input" action="simpleform.asp" method="post">
+<form name="input" action="/svapp/simpleform" method="post">{% csrf_token %}
 <center>Sound Cloud URL: <input type="text" name="url" /></center>
 <center><input type="submit" value="Go!" /></center>
 </form> 
