--- a/superHyper/visualizer/templates/visualizer/header.html
+++ b/superHyper/visualizer/templates/visualizer/header.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     {% load staticfiles %}
-    <link rel='stylesheet' href="{% static 'visualizer/css/bootstrap.min.css' %}" type="text/css"/>
+    <link rel='stylesheet' href="static/visualizer/css/bootstrap.min.css" type="text/css"/>
     <meta name="viewport" content = "width=device-width, initial-scale=1.0">
     <style type="text/css">
         html,
